apps/external/unifi/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: unifi
  namespace: unifi
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: unifi
  timeout:
    http:
      connectionIdleTimeout: 3600s
      requestTimeout: 3600s
